Bug 789633 - Ergonomics improvements for stack rooting assertions; r=sfink

There are a handful of classes that want to mix in this assertion, but it is
somewhat annoying to do this with our current tools. The current names are also
quite long and annoying to type.