js/src/shell/js.cpp
@@ -3534,7 +3534,7 @@ RelaxRootChecks(JSContext *cx, unsigned argc, jsval *vp)
     }
 
 #ifdef DEBUG
-    cx->runtime->relaxRootChecks = true;
+    cx->runtime->gcRelaxRootChecks = true;
 #endif
 
     return true;
